@startuml controle_veicular_er

' ── Lookup Tables ────────────────────────────────────────

entity TipoCombustivel {
    * Id : INT <<PK>>
    --
    * Descricao : VARCHAR
}

entity TipoServico {
    * Id : INT <<PK>>
    --
    * Descricao : VARCHAR
}

entity Estabelecimento {
    * Id : INT <<PK>>
    --
    * Nome : VARCHAR
}

' ── Entidades principais ─────────────────────────────────

entity Veiculo {
    * Id : INT <<PK>>
    --
    * Apelido : VARCHAR
    * OdometroAtual : DECIMAL
    TanqueCapacidade : DECIMAL
    Placa : VARCHAR
    TipoCombustivelId : INT <<FK>>
}

entity Servico {
    * Id : INT <<PK>>
    --
    * VeiculoId : INT <<FK>>
    TipoServicoId : INT <<FK>>
    EstabelecimentoId : INT <<FK>>
    * DataHora : DATETIME
    * Odometro : DECIMAL
    * Valor : DECIMAL
    Descricao : VARCHAR
    Observacao : VARCHAR
    KmProximoServico : DECIMAL
}

entity Abastecimento {
    * Id : INT <<PK>>
    --
    * VeiculoId : INT <<FK>>
    TipoCombustivelId : INT <<FK>>
    EstabelecimentoId : INT <<FK>>
    * DataHora : DATETIME
    * ValorTotal : DECIMAL
    * TotalLitros : DECIMAL
    ValorPorLitro : DECIMAL
    * Odometro : DECIMAL
}

' ── Relacionamentos ──────────────────────────────────────

TipoCombustivel ||--o{ Veiculo : "aceita"
TipoCombustivel ||--o{ Abastecimento : "utiliza"
TipoServico ||--o{ Servico : "categoriza"
Estabelecimento ||--o{ Servico : "realiza"
Estabelecimento ||--o{ Abastecimento : "fornece"
Veiculo ||--o{ Servico : "possui"
Veiculo ||--o{ Abastecimento : "possui"

@enduml